# how-to-do-x-in-rust

./: .gitignore  Cargo.toml  README.md  binary_data
binary-rw/: Cargo.toml  README.md
binary-rw/src/: main.rs
broadcast/: Cargo.toml
broadcast/src/: main.rs
broadcast/src/examples/: mod.rs  mpsc1.rs  mpsc2.rs  nonblock.rs
clap-cli/: Cargo.toml
clap-cli/examples/: colored.rs  convert.rs  custom_validate.rs  git_cli.rs  search.rs
jwt/: Cargo.toml  README.md
jwt-auth/: Cargo.toml  ReADME.md
jwt-auth/keys/: private.pem  public.pem
jwt-auth/src/: auth.rs  blog.rs  config.rs  errors.rs  jwt.rs  lib.rs  main.rs  user.rs
jwt-auth/src/middleware/: mod.rs
jwt-auth/src/models/: blog.rs
jwt/src/: app.rs  auth_error.rs  lib.rs  main.rs
parallel/: Cargo.toml
parallel/examples/: count_words.rs  counter.rs  fib.rs  md2html.rs
send-request/: Cargo.toml
send-request/src/examples/: custom_header.rs  get.rs  get_url_params.rs  post.rs  post_json.rs  send_form.rs
serde-test/: Cargo.toml
serde-test/src/: main.rs
this-error/: Cargo.toml
this-error/examples/: err1.rs  no_this.rs
zlib-compress/: Cargo.toml
zlib-compress/src/: main.rs
