[workspace]
members = ["zlib-compress", "binary-rw", "jwt", "jwt-auth"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
byteorder = "1.5.0"
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
jwt-simple = "0.12.9"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = "1.10.0"