[workspace]
members = ["zlib-compress", "binary-rw", "jwt", "jwt-auth", "broadcast", "send-request", "serde-test", "clap-cli", "this-error", "parallel"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
byteorder = "1.5.0"
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
jwt-simple = "0.12.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.10.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
axum = { version= "0.7.7", features = ["macros"]}
axum-extra = { version = "0.9.4", features = ["typed-header"] }
tokio = { version = "1.40.0", features = ["full"] }
thiserror = "2"
serde_yaml = "0.9"
toml = "0.7"         # for toml serialization/deserialization
bincode = "2.0.1"    # simple binary format
rmp-serde = "1.1"    # MessagePack support
serde_bytes = "0.11" # efficient bytes handling
hex = "0.4"          # optional helper for hex encoding/decoding
base64 = "0.21"
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.1.1"
rayon = "1.11.0"
walkdir = "2.5.0"
pulldown-cmark = "0.13.0"