[package]
name = "serde-test"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace=true }
serde_json = { workspace=true }
serde_yaml = { workspace=true }
toml = { workspace=true }
bincode = { workspace=true }
rmp-serde = { workspace=true }
serde_bytes = { workspace=true }
hex = { workspace=true }
base64 = { workspace=true }
anyhow = { workspace=true }